src/test/deca/context/invalid/provided/testi28.deca
{   
    int x;
    float.x = x;
}